// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`returns "undefined" if no three or more identical sequential cells exist 1`] = `undefined`;

exports[`returns "undefined" if no three or more identical sequential cells exist 2`] = `undefined`;

exports[`returns "undefined" if no three or more identical sequential cells exist 3`] = `undefined`;

exports[`returns "undefined" if no three or more identical sequential cells exist 4`] = `undefined`;

exports[`selects three or more identical sequential cells 1`] = `1`;

exports[`selects three or more identical sequential cells 2`] = `
[⬜] [⬜] [⬜] [⬜]
{🟥} {🟥} {🟥} [⬜]
[⬜] [⬜] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜]
`;

exports[`selects three or more identical sequential cells 3`] = `1`;

exports[`selects three or more identical sequential cells 4`] = `
[⬜] [⬜] [⬜] [⬜]
[⬜] {🟥} {🟥} {🟥}
[⬜] [⬜] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜]
`;

exports[`selects three or more identical sequential cells 5`] = `0`;

exports[`selects three or more identical sequential cells 6`] = `
[⬜] {🟥} [⬜] [⬜]
[⬜] {🟥} [⬜] [⬜]
[⬜] {🟥} [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜]
`;

exports[`selects three or more identical sequential cells 7`] = `0`;

exports[`selects three or more identical sequential cells 8`] = `
[⬜] [⬜] [⬜] [⬜]
[⬜] {🟥} [⬜] [⬜]
[⬜] {🟥} [⬜] [⬜]
[⬜] {🟥} [⬜] [⬜]
`;
